--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "build": "bun build src/script.ts --outdir public --format esm",
+    "dev": "bun run build"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
